--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
     <body>
         <header>
             <div class="flex-header">
+                <h5>Header Logo</h5>
                 <div class="one">Header link one</div>
                 <div class="two">Header link two</div>
                 <div class="three">Header link three</div>
             </div>
         </header>
 
-        <hero>
+        <div class="hero">
             <h2>This website is awesome!</h2>
             <p>This website has some subtext that goes here under the main title. 
                 It's a smaller font and the color is lower contrast</p>
                 <div class="placeholder">This is a placeholder for an image</div>
-                    <button>Sign up</button>
-        </hero>
+                <button>Sign up</button>
+            </div>
 
-        <container>
+        <div class="middle">
             <h3>Some random information.</h3>
                 <div class="flex-random">
                     <div class="one">this is some subtext under an illustration or image</div>
@@ -31,20 +32,20 @@
                     <div class="three">this is some subtext under an illustration or image</div>
                     <div class="four">this is some subtext under an illustration or image</div>
                 </div>
-        </container>
+            </div>
 
-        <container class="quote">
+        <div class="quote">
             <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just 
                 filling up space, or maybe people will actually read it. Who knows? All I know is that 
             it looks nice.</p>
-            <p>-Thor, God of Thunder</p>
-        </container>
+            <p><strong>-Thor, God of Thunder</strong></p>
+         </div>
 
-        <container class="call2action">
+        <div class="call2action">
             <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking that button right over there!</p>
             <button>Sign up</button>
-        </container>
+        </div>
 
         <footer>Copyright @ Wa-de css project 2022</footer>
 
