--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <body>
         <header>
             <div class="flex-header">
-                <h5>Header Logo</h5>
-                <div class="one">Header link one</div>
-                <div class="two">Header link two</div>
-                <div class="three">Header link three</div>
+                <h5 class="hl">Header Logo</h5>
+                <div class="link">Header link one</div>
+                <div class="link">Header link two</div>
+                <div class="link">Header link three</div>
             </div>
         </header>
 
         <div class="hero">
-            <h2>This website is awesome!</h2>
+            <h2 class="awesome">This website is awesome!</h2>
             <p>This website has some subtext that goes here under the main title. 
                 It's a smaller font and the color is lower contrast</p>
                 <div class="placeholder">This is a placeholder for an image</div>
@@ -25,12 +25,16 @@
             </div>
 
         <div class="middle">
-            <h3>Some random information.</h3>
+            <h3 class="header-text">Some random information.</h3>
                 <div class="flex-random">
-                    <div class="one">this is some subtext under an illustration or image</div>
-                     <div class="two">this is some subtext under an illustration or image</div>
-                    <div class="three">this is some subtext under an illustration or image</div>
-                    <div class="four">this is some subtext under an illustration or image</div>
+                    <img src="blank.jpg">
+                    <img src="blank.jpg">
+                    <img src="blank.jpg">
+                    <img src="blank.jpg">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">this is some subtext under an illustration or image</div>
                 </div>
             </div>
 
